[package]
name = "wikilink"
version = "2.1.0"
authors = ["Molive <moliveofscratch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
minreq = { version = "2.2", features = ["https", "json-using-serde"] }
serde_json = "1.0"
percent-encoding = "1.0"
chrono = "0.4"
rayon = "1.3"
rand = "0.7"